@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -78,7 +78,7 @@ public class JaxRsTransactionNameInstrumentation extends ElasticApmInstrumentati
                         transactionName = pathAnnotationValue;
                     }
                 }
-                transaction.withName(transactionName, PRIO_HIGH_LEVEL_FRAMEWORK);
+                transaction.withName(transactionName, PRIO_HIGH_LEVEL_FRAMEWORK, false);
             }
         }
     }
