@@ -34,6 +34,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* When JAX-RS-annotated method delegates to another JAX-RS-annotated method, transaction name should include method A - {pull}1062[#1062]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
